[package]
name = "nyalog"
version = "0.1.0"
edition = "2021"
description = "a smol keylogger for linux :3"
license = "MIT"
repository = "https://github.com/0xdilo/nyalog"
keywords = ["keylogger", "keyboard", "linux", "wayland", "x11"]
categories = ["command-line-utilities"]

[dependencies]
evdev = { version = "0.12", default-features = false }
xkbcommon = "0.8"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
